--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,10 @@
     padding-bottom: 0;
 }
 
+#navbuttons {
+    width: 45%;
+}
+
 .logo {
     margin-left: 2rem;
 }
@@ -127,4 +131,87 @@
 
 .text-muted {
     color: lightgray;
+}
+
+@media (max-width: 1100px) {
+    #navbuttons {
+        width: auto;
+    }
+}
+
+@media (max-width: 800px) {
+    .topsection {
+        margin: 0 auto;
+    }
+    #navbuttons {
+        display: none;
+    }
+    .row {
+        width: 100%;
+    }
+    #jumb {
+        width: 100%;
+        text-align: center;
+        margin-left: 2rem;
+    }
+    #jumb h1 {
+        font-size: 2.5rem;
+        margin: 0 auto;
+        justify-self: center;
+    }
+    #sec1 {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    #sec1 h3 {
+        font-size: 1.3rem;
+    }
+    #cardRow {
+        width: 100%;
+        margin: 5rem auto;
+        flex-direction: column;
+    }
+    .card {
+        margin-left: 3rem;
+        padding: 0;
+        width: 22rem;
+    }
+    #digitalProducts {
+        flex-direction: column;
+        margin: 0 auto;
+        width: 100%;
+    }
+    #digitalProducts h3 {
+        width: 100%;
+        margin: 1rem;
+    }
+    #digitalProducts p {
+        margin: 1rem;
+        font-size: smaller;
+    }
+    #lists {
+        margin: 0 auto 2rem auto;
+        font-size: 1rem;
+    }
+    #black {
+        flex-direction: column;
+        margin: 0 auto 0 1rem;
+        padding: 1rem;
+    }
+    #black h3 {
+        margin-bottom: 2rem;
+    }
+    #hiringTxt {
+        margin-bottom: 2rem;
+    }
+    .notInResp {
+        display: none;
+    }
+    #footer {
+        margin: 0 auto;
+    }
+    #footer div {
+        margin: 2rem;
+    }
 }
